[package]
name = "engine-worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
mac_address = "1.1.5"
num_cpus = "1.15.0"
sysinfo = "0.29.2"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
octocrab = "0.25.1"
serde_json = "1.0.99"
tempfile = "3.6.0"
error-chain = "0.12.4"
